# naim-program

./: Anchor.toml  package-lock.json
programs/naim/: Cargo.toml
programs/naim/src/: constants.rs  error.rs  lib.rs  state.rs
tests/: naim.ts
